<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="270dp"
        android:layout_height="723dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtAyuda"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="@color/help_color"
                android:fontFamily="sans-serif-black"
                android:text="@string/Help"
                android:textAlignment="center"
                android:textColor="@color/letras"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/help_color"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="63dp"
                        android:layout_height="23dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/circulo_negro" />

                    <TextView
                        android:id="@+id/txtChoose"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="@string/Choose"
                        android:textColor="@color/LetrasBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="63dp"
                        android:layout_height="23dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/circulo_negro" />

                    <TextView
                        android:id="@+id/txtCategorias"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="@string/Categorias"
                        android:textColor="@color/LetrasBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="63dp"
                        android:layout_height="23dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/circulo_negro" />

                    <TextView
                        android:id="@+id/txtresponde"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="@string/Responde"
                        android:textColor="@color/LetrasBlack"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAjugar"
                        android:layout_width="163dp"
                        android:layout_height="53dp"
                        android:gravity="center"
                        android:text="@string/Ajugar"
                        android:textColor="@color/letras"
                        android:fontFamily="sans-serif-black"
                        android:textSize="34sp"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>